--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
         <modig-core.version>1.0.1</modig-core.version>
         <modig-security.version>3.0.0</modig-security.version>
         <modig-testcertificates.version>1.1.4</modig-testcertificates.version>
-        <nav.metrics.version>3.1.1</nav.metrics.version>
-        <oidc-security.version>3.68.18</oidc-security.version>
+        <nav.metrics.version>3.3.1</nav.metrics.version>
+        <oidc-security.version>2.0-digisyfo</oidc-security.version>
 
         <!-- Java -->
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
