--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <javax.interceptor-api.version>1.2</javax.interceptor-api.version>
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
+
+        <!-- Test -->
+        <mockito.version>1.10.19</mockito.version>
+        <junit.version>4.11</junit.version>
+        <assertj-core.version>2.4.1</assertj-core.version>
     </properties>
 
     <dependencyManagement>
@@ -296,6 +301,24 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpcore</artifactId>
                 <version>4.4</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj-core.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
