--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,11 @@
                 <version>${slf4j-api.version}</version>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
+            </dependency>
 
             <!-- metrics -->
             <dependency>
