--- a/web/pom.xml
+++ b/web/pom.xml
@@ -70,6 +70,10 @@
         </dependency>
         <!-- logging -->
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
