--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,17 @@
 <web-app>
     <display-name>contextholder</display-name>
+    <listener>
+        <listener-class>no.nav.apiapp.ApiAppServletContextListener</listener-class>
+    </listener>
+    <context-param>
+        <param-name>springKontekstKlasse</param-name>
+        <param-value>no.nav.sbl.config.ApplicationConfig</param-value>
+    </context-param>
 
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>Ubeskyttet</web-resource-name>
             <url-pattern>/internal/*</url-pattern>
-            <url-pattern>/api/events/*</url-pattern>
         </web-resource-collection>
     </security-constraint>
     <security-constraint>
@@ -17,72 +23,6 @@
             <role-name>**</role-name>
         </auth-constraint>
     </security-constraint>
-
-    <servlet>
-        <servlet-name>contextholder-api</servlet-name>
-        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-        <init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>no.nav.sbl.rest</param-value>
-        </init-param>
-        <init-param>
-            <param-name>jersey.config.server.provider.scanning.recursive</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>contextholder-api</servlet-name>
-        <url-pattern>/api/*</url-pattern>
-    </servlet-mapping>
-
-    <listener>
-        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-    </listener>
-
-    <servlet>
-        <servlet-name>SelftestServlet</servlet-name>
-        <servlet-class>no.nav.sbl.selftest.SelftestServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SelftestServlet</servlet-name>
-        <url-pattern>/internal/selftest</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>isAliveServlet</servlet-name>
-        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>isAliveServlet</servlet-name>
-        <url-pattern>/internal/isAlive</url-pattern>
-    </servlet-mapping>
-
-    <!-- Specify Spring Application Context -->
-    <context-param>
-        <param-name>contextClass</param-name>
-        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
-    </context-param>
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>no.nav.sbl.config.ApplicationConfig</param-value>
-    </context-param>
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-
-    <!-- JBOSS specific configuration due to its use of bundled RestEasy as jax-rs implementation  -->
-    <context-param>
-        <param-name>resteasy.scan</param-name>
-        <param-value>false</param-value>
-    </context-param>
-    <context-param>
-        <param-name>resteasy.scan.resources</param-name>
-        <param-value>false</param-value>
-    </context-param>
-    <context-param>
-        <param-name>resteasy.scan.providers</param-name>
-        <param-value>false</param-value>
-    </context-param>
 
     <resource-ref>
         <res-ref-name>jdbc/modiacontextholderDS</res-ref-name>
