--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
         <web-resource-collection>
             <web-resource-name>Ubeskyttet</web-resource-name>
             <url-pattern>/internal/*</url-pattern>
+            <url-pattern>/api/events/*</url-pattern>
         </web-resource-collection>
     </security-constraint>
     <security-constraint>
