--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>no.nav.sbl</groupId>
         <artifactId>mor-pom</artifactId>
-        <version>2018.09.18.10.04</version>
+        <version>2018.09.25.09.40</version>
     </parent>
 
     <artifactId>modiacontextholder</artifactId>
@@ -40,7 +40,7 @@
             <dependency>
                 <groupId>no.nav.sbl</groupId>
                 <artifactId>bom</artifactId>
-                <version>2018.09.18.10.04</version>
+                <version>2018.09.25.09.40</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -83,13 +83,12 @@
             <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>3.1.0</version>
+            <groupId>no.nav.sbl</groupId>
+            <artifactId>util</artifactId>
         </dependency>
         <dependency>
             <groupId>no.nav.sbl</groupId>
-            <artifactId>util</artifactId>
+            <artifactId>jdbc</artifactId>
         </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
