--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,14 @@
             <artifactId>javax.ws.rs-api</artifactId>
             <groupId>javax.ws.rs</groupId>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
 
         <!-- test -->
         <dependency>
