KAIZEN-0 Valider veiledertokens fra azuread

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -62,6 +62,8 @@ fasitResources:
       resourceType: credential
     - alias: aad_b2c_discovery
       resourceType: baseurl
+    - alias: loginservice_oidc
+      resourceType: AzureOIDC
 
     # Appdynamics
     - alias: appdynamics
