--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,6 +60,20 @@ jobs:
           DRY_RUN: true
           CLUSTER: dev-fss
           RESOURCE: nais-q0.yaml
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          PRINT_PAYLOAD: true
+          DRY_RUN: true
+          CLUSTER: dev-fss
+          RESOURCE: nais-q1.yaml
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          PRINT_PAYLOAD: true
+          DRY_RUN: true
+          CLUSTER: dev-fss
+          RESOURCE: nais-q6.yaml
 
   deploy-prod:
     name: Deploy to prod
