--- a/.nais/nais-q1.yaml
+++ b/.nais/nais-q1.yaml
@@ -50,7 +50,7 @@ spec:
     - kvPath: /credential/data/dev/aad_b2c_clientid
       mountPath: /var/run/secrets/nais.io/aad_b2c_clientid
     - kvPath: /apikey/appdynamics/dev
-      mountPath: /var/run/secrets/nais.io/appdynamics
+      mountPath: /var/run/secrets/nais.io/vault
   env:
   - name: SECURITYTOKENSERVICE_URL
     value: "https://sts-q1.preprod.local/SecurityTokenServiceProvider/"
