[OPP-1054] rydding i maintest

--- a/.nais/nais-q0.yaml
+++ b/.nais/nais-q0.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     team: personoversikt
 spec:
-  image: {{ image }}
+  image: "{{ image }}"
   port: 8080
   webproxy: true
   liveness:
