--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>no.nav.common</groupId>
         <artifactId>mor-pom</artifactId>
-        <version>1.2020.01.08-12.57-62d0c889ddb5</version>
+        <version>1.2020.07.14_09.10-c90ff81f6194</version>
     </parent>
 
     <artifactId>modiacontextholder</artifactId>
@@ -113,7 +113,7 @@
         </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
-            <artifactId>oidc-security</artifactId>
+            <artifactId>oidc</artifactId>
         </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
@@ -134,10 +134,6 @@
         <dependency>
             <groupId>no.nav.common</groupId>
             <artifactId>test</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>no.nav.common</groupId>
-            <artifactId>fasit</artifactId>
         </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
